--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   settings_ui: ^0.6.0
+  table_calendar: ^3.0.0
+  flutter_local_notifications: ^5.0.0+1
 
 dev_dependencies:
   flutter_test:
