--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   expandable: ^5.0.1
   flutter_slidable: ^0.5.7
   percent_indicator: ^2.1.9+1
+  flutter_svg: ^0.19.1
   animated_widgets: ^1.0.6
   flutter_local_notifications: ^1.4.4+2
   # The following adds the Cupertino Icons font to your application.
@@ -51,6 +52,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - images/Example.png
+   - assets/images/
+   - assets/icons/
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
