--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   flutter_slidable: ^0.5.7
   percent_indicator: ^2.1.9+1
   animated_widgets: ^1.0.6
-  flutter_local_notifications: ^1.4.4+2
+  flutter_local_notifications_platform_interface: ^3.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
