--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_svg: ^0.19.1
   animated_widgets: ^1.0.6
   flutter_local_notifications_platform_interface: ^3.0.0
+  ff_navigation_bar: ^0.1.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
