--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,18 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   settings_ui: ^0.6.0
+  flutter_native_splash: ^0.3.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_native_splash: ^0.3.2
 
+flutter_native_splash:
+  color: "#e91e63"
+  image: assets/splash.png
+  android: true
+  ios: true
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
