--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,8 @@ dependencies:
   percent_indicator: ^2.1.9+1
   flutter_svg: ^0.19.1
   animated_widgets: ^1.0.6
-  flutter_local_notifications_platform_interface: ^3.0.0
-  # flutter_local_notifications: ^1.4.4+2
+  # flutter_local_notifications_platform_interface: ^3.0.0
+  flutter_local_notifications: ^1.4.4+2
   table_calendar: ^3.0.0
   ff_navigation_bar: ^0.1.4
   # The following adds the Cupertino Icons font to your application.
